# dashboard-qt

./: .gitignore  README.md  main.py  pyproject.toml
app/: bcontrol_client.py  config.py  plc_client.py  plc_data_map.py  rest_client.py  state.py  vitals_client.py  window_config.py
docs/: tailwind-to-qml.md
docs/plans/: 2026-07-03-fan-light-onoff-config-design.md  2026-07-03-fan-light-onoff-config.md
qml/: Main.qml  Theme.qml  qmldir
qml/modals/: ChillerControlModal.qml  ErrorModal.qml  SeatAlarmModal.qml
qml/pages/: Dashboard.qml  Showcase.qml  Splash.qml
qml/panels/: AuxiliaryOutputPanel.qml  ChamberControlPanel.qml  ChamberSeatOverlay.qml  ChillerStatusPanel.qml  CylinderBank.qml  FanPanel.qml  Header.qml  HyperbaricChamber.qml  LightingPanel.qml  O2GeneratorPanel.qml
qml/ui/: AppButton.qml  AppModal.qml  AppSlider.qml  Card.qml  CompressorUnit.qml  FSSIndicator.qml  PressureTank.qml  SeatGrid.qml  ToggleSwitch.qml
tests/: conftest.py  test_bcontrol_client.py  test_plc_client.py  test_plc_data_map.py  test_rest_client.py  test_state.py  test_vitals_client.py
