[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rsp-qt"
version = "0.0.1"
description = "Qt port of the hyperbaric chamber HMI"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "python-socketio[asyncio_client]>=5.11",
    "qasync>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
